Wrap positioning stable without scrollbar, slight menu fixes

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -57,6 +57,8 @@ grey3: adadad
 
 }
 
+html {overflow-y: scroll; }
+
 body{font-family: 'Open Sans', arial, sans-serif; font-size:14px; line-height: 20px; color:#191919;}
 
 h1,
@@ -486,7 +488,7 @@ label.dynamic-subjects em.subject .ficon{color:#1a8f72;}
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     display: none;
     float: left;
-    left: -6px;
+    left: -2px;
     list-style: none outside none;
     margin: 2px 0 0;
     min-width: 228px;
@@ -495,6 +497,7 @@ label.dynamic-subjects em.subject .ficon{color:#1a8f72;}
     top: 100%;
     z-index: 1000;
 }
+
 .holdings-list ul{list-style:none;margin:0;padding:0;
   -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.2);
      -moz-box-shadow: 0 1px 3px rgba(0,0,0,.2);
@@ -504,9 +507,9 @@ label.dynamic-subjects em.subject .ficon{color:#1a8f72;}
 #nav a:focus {text-decoration: none;}
 
 #nav .nav-menu > li {border-left:1px solid #1A8F72; padding:3px;margin:5px; padding-left: 15px;}
-#nav .nav-menu > li:first-child {border-left:none;}
+#nav .nav-menu > li:first-child {border-left:none; padding-left:0px;}
 
-.dropdown-menu li a { display:block; background:#f7f3ee;padding:12px;border-top:1px solid #ccc;color:#1A8F72;}
+.dropdown-menu li a { display:block; background:#f7f3ee;padding:12px 12px 12px 18px;border-top:1px solid #ccc;color:#1A8F72;}
 .dropdown-menu li a:hover{color:#1A8F72;background:#fff;}
 .dropdown-menu li:first-child a{border-top:none;}
 .dropdown-menu li.active a{background:#fff;color:#000;}
